# oxide-flix-rs

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/ui/: input.tsx
frontend/src/pages/: video.tsx
src/: config.rs  main.rs  routers.rs  state.rs
src/vides/: mod.rs  routers.rs
src/vides/handlers/: delete.rs  info.rs  list.rs  mod.rs  stream.rs  upload.rs
templates/: index.html
