[package]
name = "oxide-flix-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.16.0", features = ["derive"] }
axum = { version = "0.8.9", features = ["macros", "multipart"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
hex = { version = "0.4.3", features = ["serde"] }
local-ip-address = "0.6.13"
mimalloc = { version = "0.1.52" }
mime_guess = "2.0.5"
ring = { version = "0.17.14" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["full"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
